--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -49,7 +49,8 @@
         align-items: center;
         justify-content: center;
         transition: filter 100ms;
-        
+        pointer-events: all; /* Re-enables clicks on its child elements by default */
+
     }
     .icon-button:hover{
         filter: brightness(1.2);
@@ -137,7 +138,8 @@
         align-items: center;
         justify-content: center;
         transition: filter 100ms;
-        
+        pointer-events: all; /* Re-enables clicks on its child elements by default */
+
     }
     .icon-button:hover{
         filter: brightness(1.2);
@@ -194,12 +196,14 @@
     justify-content: space-between;
     z-index: 100;
     position:fixed;
+    pointer-events: none; /* Disables clicks on its child elements by default */
 }
 #STHlogo{
     width: calc(var(--nav-size)*0.7);
     margin-top: calc(var(--nav-size)*0.1);
     transition: transform 2s ease-in-out;
     z-index: 1005;
+    pointer-events: all; /* Re-enables clicks on its child elements by default */
 }
 #STHlogo:hover{transform:  rotate(360deg);}
 .navbar-title{
